<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightYellow">

        <RelativeLayout
            android:id="@+id/headerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/title"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tvSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="15dp"
                    android:text="@string/search_your_recipes"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:background="@drawable/input_shape_dark_red"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_search_dark_red"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="10dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleTrending"
                android:text="@string/trending"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardSearch"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/recyclerView"
                android:layout_below="@+id/titleTrending"
                android:layout_marginTop="10dp"/>

            <ProgressBar
                android:id="@+id/loadingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTrending"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerView"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/meal_categories"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:scrollbars="none"
                android:clipToPadding="false"
                android:layout_below="@id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp" />

            <include
                android:id="@+id/categoryList"
                layout="@layout/activity_recycler_category" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <include android:id="@+id/bottom_navigation"
        layout="@layout/activity_bottom_navigation"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>