<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".RecipeDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppBarLayoutTheme">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgMeal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/tvRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="My name is Chuang Jing Yee"
                    android:gravity="center_horizontal"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding ="5dp"
                    android:paddingBottom="5dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/shadow_down_to_up" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_marginTop="-7dp"
                    android:indeterminate="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnFav"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_favourite_red_border"
                        android:layout_marginRight="5dp"/>

                    <Button
                        android:id="@+id/btnShare"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_share" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp">
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/textCategory"
                                android:text="@string/label_category"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:paddingTop="14dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/category"
                                android:text="@string/loading"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="14dp"
                                android:textSize="16sp"
                                android:textColor="@color/colorPrimaryText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/Country"
                                android:text="@string/label_country"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:paddingTop="14dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/country"
                                android:text="@string/loading"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="14dp"
                                android:textSize="16sp"
                                android:textColor="@color/colorPrimaryText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_instructions"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    android:drawableEnd="@drawable/ic_information"
                    android:drawableRight="@drawable/ic_information" />

                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/instructions"
                        android:text="@string/loading"
                        android:background="@color/colorPrimary"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/IngredientsDetails"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">
                        <TextView
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:layout_marginTop="14dp"
                            android:text="@string/label_Ingredients"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <TextView
                                    android:id="@+id/ingredient"
                                    android:paddingLeft="14dp"
                                    android:paddingRight="14dp"
                                    android:textSize="16sp"
                                    android:textColor="@color/colorPrimaryText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title_related_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Related_Recipes"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/recyclerView"
                    android:layout_below="@+id/titleSelected"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include android:id="@+id/bottom_navigation"
            layout="@layout/activity_bottom_navigation"/>
    </LinearLayout>
</ScrollView>



